--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+# .ipynb_checkpoints  # Commented out to include in repo
 
 # pyenv
 .python-version
@@ -114,7 +114,3 @@ dmypy.json
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Large datasets (keep models, remove from ignore)
-data_and_apis/datasets/openphish.csv
-data_and_apis/datasets/legit.csv
